--- a/spring-gelf.conf
+++ b/spring-gelf.conf
@@ -1,8 +1,26 @@
-input {                                         
-    gelf {}                                 
-}                                               
-output {                                        
-    elasticsearch { hosts => [elasticsearch]
-}                                               
-stdout {}                               
-}                                               
+input {
+	gelf {}
+}
+
+filter {
+  #tag as stacktrace if the keyword "at" appears after a tabulator
+  if [message] =~ "\tat" {
+    grok {
+      match => ["message", "^(\tat)"]
+      add_tag => ["stacktrace"]
+    }
+  }
+
+  grok {
+    match => [ "message",
+               "%{TIMESTAMP_ISO8601:timestamp}\s+%{LOGLEVEL:severity}\s+\[%{DATA:service},%{DATA:trace},%{DATA:span},%{DATA:exportable}\]\s+%{DATA:pid}\s+---\s+\[%{DATA:thread}\]\s+%{DATA:class}\s+:\s+%{GREEDYDATA:logmessage}"
+             ]
+  }
+
+}
+
+output {
+	elasticsearch { hosts => [elasticsearch]
+}
+	stdout {}
+}
